# SnakeGame

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: body.hpp  bot_championship.hpp  controller.hpp  coord.hpp  decor.hpp  event.hpp  graphical_view.hpp  limits.hpp  model.hpp  options.hpp  power.hpp  rabbit.hpp  snake.hpp  terminal_view.hpp  utils.hpp  view.hpp
src/: controller.cpp  coord.cpp  event.cpp  game_driver.cpp  graphical_view.cpp  main.cpp  model.cpp  model_builder.cpp  options.cpp  rabbit.cpp  snake.cpp  terminal_view.cpp  text_view.cpp
